@@ -7,6 +7,9 @@ Version 5.3
   different case then an exception would be thrown.
 - Developed and integrated a new sql tokenizer.  This tokenizer now recognizes all comment 
   types and is approx. 40% faster.
+- fixed membership provider so that calling GetPassword with an incorrect password will
+  throw the appropriate exception (bug #38939)
+
 
 Version 5.2.3 - 8/14/08
 - Increased the speed of MySqlDataReader.GetOrdinal dramatically by using a couple
